--- a/src/scss/globals.scss
+++ b/src/scss/globals.scss
@@ -9,10 +9,6 @@ body {
   font-family: $primary-font;
 }
 
-a {
-  color: inherit;
-}
+a { color: inherit; }
 
-* {
-  box-sizing: border-box;
-}
+* { box-sizing: border-box; }
