--- a/src/scss/components/Navbar.module.scss
+++ b/src/scss/components/Navbar.module.scss
@@ -19,6 +19,7 @@
       justify-content: flex-end;
 
       .link {
+        color: $light;
         margin: 0.33rem 0.62rem 0.33rem 0.62rem;
       }
 
