--- a/src/scss/pages/Home.module.scss
+++ b/src/scss/pages/Home.module.scss
@@ -17,15 +17,14 @@
     align-items: center;
 
     .item {
-      padding: 0.5rem;
-      margin-top: 1rem;
+      margin-top: 1.75rem;
 
       .card {
-        padding: 1.33rem;
+        padding: 1.5rem 0.5rem 1.5rem 0.5rem;
 
         .content {
           .header1 {
-            margin: 0.5rem 0 0 0;
+            margin: 0;
             padding: 0.33rem 0 0.33rem 0;
             color: $text-dark;
             text-align: justify;
@@ -33,6 +32,7 @@
 
           .header2 {
             font-weight: bold;
+            padding: 0 0 0.53rem 0;
             color: $text-dark;
             text-align: justify;
             border-bottom: 1px solid $text-light;
@@ -40,7 +40,17 @@
         }
 
         .actions {
+          display: flex;
+          flex-direction: column;
           justify-content: center;
+
+          .body {
+            width: 70%;
+            text-align: justify;
+            padding-bottom: 0.55rem;
+            margin-bottom: 0.33rem;
+          }
+
           .button {
             width: 70%;
           }
