--- a/src/scss/components/Navbar.module.scss
+++ b/src/scss/components/Navbar.module.scss
@@ -9,9 +9,9 @@
     flex-grow: 1;
     color: $light;
 
-    // .brand {
-    //   color: $text-dark;
-    // }
+    .brandLink {
+      color: $light;
+    }
 
     .nav {
       display: flex;
