--- a/src/scss/theme/theme.scss
+++ b/src/scss/theme/theme.scss
@@ -16,11 +16,15 @@ $text-dark: #363636;
 // Background colors
 $bg-light: #EFFBFF;
 $bg-dark: #272d2dff;
-
-
 $bg: #016FB9;
 $bg1: hsla(204, 99%, 36%, 1);
 $bg2: hsla(204, 99%, 36%, 0.67);
+
+// Brands
+$twitter: #1DA1F2;
+$instagram: #E1306C;
+$instagram-pink: #C13584;
+$github: #211F1F;
 
 // Primary font-family
 $primary-font: 'Raleway', sans-serif;
