--- a/src/scss/pages/Home.module.scss
+++ b/src/scss/pages/Home.module.scss
@@ -62,4 +62,61 @@
 
   }
 
+  .gridRow {
+    margin-top: 0.5rem;
+    display: flex;
+    flex: 1;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+
+    .rowItem {
+      margin: 0.5rem 0 0 0;
+
+      .card {
+        .content {
+          padding: 0.87rem;
+          margin: 0;
+          .title {
+            border-bottom: 1px solid $text-light;
+            padding-bottom: 0.33rem;
+            margin-bottom: 0;
+          }
+
+        }
+
+        .actions {
+          margin-top: 0;
+          padding-bottom: 1.2rem;
+          .body {
+            padding: 0.1rem;
+          }
+
+          .twitterButton {
+            border: 1px solid $twitter;
+
+            .twitter {
+              color: $twitter;
+            }
+          }
+
+          .instagramButton {
+            border: 1px solid $instagram-pink;
+
+            .instagram {
+              color: $instagram;
+            }
+          }
+
+          .githubButton {
+            border: 1px solid $github;
+
+            .github {
+              color: $github;
+            }
+          }
+        }
+      }
+    }
+  }
 }
